refactor(web2): stop using APIs deprecated for removal
Java 21 marks for removal what the console still called: the thread group
daemon and destroyed flags, which the platform degraded to a meaningless
value and to a constant false, and the boxing constructors. The two flags
leave the thread group line of the Device page, Long and Character are boxed
through valueOf, and the URL constructor, deprecated since Java 20, becomes
a URI.

The deprecated APIs left are org.eclipse.kura.cloud.CloudService and
CloudServiceFactory: the console keeps them on purpose, to list the legacy
cloud connections.